second time commit

--- a/src/main/java/com/qa/hubspot/config/config.properties
+++ b/src/main/java/com/qa/hubspot/config/config.properties
@@ -1,9 +1,13 @@
 browser = chrome
 url=https://demo.opencart.com/index.php?route=account/login
+
 username=sagarikamisra55@gmail.com
 password=selenium1234
+
 headless=false
-incognito=true
+incognito=false
+hightlight=true
+
 accountname="my account"
 hubUrl=
 remota=false
